# cppitertools

./: .bazelrc  .clang-format  .gitignore  .install-libcxx-travis.sh  .travis.yml  BUILD  CMakeLists.txt  LICENSE.md  MODULE.bazel  README.md  SECURITY.md  accumulate.hpp  batched.hpp  chain.hpp  chunked.hpp  combinations.hpp  combinations_with_replacement.hpp  compress.hpp  conanfile.py  count.hpp  cycle.hpp  dropwhile.hpp  enumerate.hpp  filter.hpp  filterfalse.hpp  groupby.hpp  grouper.hpp  imap.hpp  iter_ideas.txt  iterator_range.hpp  iteratoriterator.hpp  iterbase.hpp  itertools.hpp  main.cpp  moving_section.hpp  permutations.hpp  powerset.hpp  product.hpp  range.cpp  range.h  (+16 more)
boost_tests/: .gitignore  SConstruct  testzip.cpp
boost_tests/pattern_files/: zip_output.txt
catchtest/: .gitignore  Makefile  SConstruct  catch.hpp  helpers.hpp  test_accumulate.cpp  test_chain.cpp  test_combinations.cpp  test_combinations_with_replacement.cpp  test_compress.cpp  test_count.cpp  test_cycle.cpp  test_dropwhile.cpp  test_enumerate.cpp  test_filter.cpp  test_filterfalse.cpp  test_groupby.cpp  test_grouper.cpp  test_helpers.cpp  test_helpers.hpp  test_imap.cpp  test_mixed.cpp  test_permutations.cpp  test_powerset.cpp  test_product.cpp  test_range.cpp  test_repeat.cpp  test_reversed.cpp  test_slice.cpp  test_sliding_window.cpp  test_sorted.cpp  test_starmap.cpp  test_takewhile.cpp  test_unique_everseen.cpp  test_unique_justseen.cpp  test_zip.cpp  test_zip_longest.cpp
cmake/: dummy-config.cmake.in
cppitertools/: accumulate.hpp  batched.hpp  chain.hpp  chunked.hpp  combinations.hpp  combinations_with_replacement.hpp  count.hpp  cycle.hpp  dropwhile.hpp  enumerate.hpp  filter.hpp  filterfalse.hpp  groupby.hpp  imap.hpp  itertools.hpp  permutations.hpp  powerset.hpp  repeat.hpp  reversed.hpp  slice.hpp  sliding_window.hpp  sorted.hpp  starmap.hpp  takewhile.hpp  unique_everseen.hpp  unique_justseen.hpp  zip.hpp
cppitertools/internal/: iterator_wrapper.hpp  iteratoriterator.hpp  iterbase.hpp
examples/: .gitignore  CMakeLists.txt  SConstruct  accumulate_examples.cpp  batched_examples.cpp  chain_examples.cpp  chunked_examples.cpp  combinatoric_examples.cpp  compress_examples.cpp  count_examples.cpp  cycle_examples.cpp  dropwhile_examples.cpp  enumerate_examples.cpp  filter_examples.cpp  filterfalse_examples.cpp  groupby_examples.cpp  grouper_examples.cpp  imap_examples.cpp  mixed_examples.cpp  range_examples.cpp  repeat_examples.cpp  reversed_examples.cpp  samples.hpp  slice_examples.cpp  sliding_window_examples.cpp  sorted_examples.cpp  starmap_examples.cpp  takewhile_examples.cpp  testaccumulate.cpp  testchain.cpp  testchainfromiterable.cpp  testcombinations.cpp  testcombinations_with_replacement.cpp  testcommand_chains.cpp  testcompress.cpp  testcount.cpp  testcycle.cpp  testenumerate.cpp  testfilter.cpp  testfilterfalse.cpp  (+8 more)
include/: chunked.hpp  combinations_with_replacement.hpp  cycle.hpp  enumerate.hpp  groupby.hpp  permutations.hpp  product.hpp  repeat.hpp  unique_everseen.hpp  unique_justseen.hpp  zip_longest.hpp
include/internal/: iterbase.hpp
internal/: base_iterator.hpp  iter_tuples.hpp  iterator_wrapper.hpp  iteratoriterator.hpp  iterbase.hpp
test/: .gitignore  BUILD  CMakeLists.txt  SConstruct  download_catch.sh  helpers.hpp  make_tests.bzl  test_accumulate.cpp  test_base_iterator.cpp  test_batched.cpp  test_chain.cpp  test_chunked.cpp  test_combinations.cpp  test_combinations_with_replacement.cpp  test_compress.cpp  test_count.cpp  test_cycle.cpp  test_dropwhile.cpp  test_enumerate.cpp  test_filter.cpp  test_filterfalse.cpp  test_groupby.cpp  test_helpers.cpp  test_imap.cpp  test_iterator_wrapper.cpp  test_iteratoriterator.cpp  test_iterbase.cpp  test_mixed.cpp  test_permutations.cpp  test_powerset.cpp  test_product.cpp  test_range.cpp  test_repeat.cpp  test_reversed.cpp  test_shuffled.cpp  test_slice.cpp  test_sliding_window.cpp  test_sorted.cpp  test_starmap.cpp  test_takewhile.cpp  (+4 more)
tests/: .gitignore  Makefile  SConstruct  is_mac.sh  samples.hpp  testaccumulate.cpp  testchain.cpp  testcombinations.cpp  testcombinations_with_replacement  testcombinations_with_replacement.cpp  testcommand_chains.cpp  testcompress  testcompress.cpp  testcycle.cpp  testdropwhile  testdropwhile.cpp  testenumerate.cpp  testfilter.cpp  testfilterfalse.cpp  testgroupby.cpp  testgrouper.cpp  testimap.cpp  testmoving_section.cpp  testpermutations.cpp  testpowerset.cpp  testproduct.cpp  testrange.cpp  testrepeat.cpp  testreverse.cpp  testreversed.cpp  testslice.cpp  testsliding_window.cpp  testsorted.cpp  teststarmap.cpp  testtakewhile.cpp  testunique_everseen.cpp  testunique_justseen.cpp  testzip.cpp  testzip_longest.cpp
